--- a/log_output/Dockerfile
+++ b/log_output/Dockerfile
@@ -1,7 +1,10 @@
-FROM python:3.12-alpine
+FROM python:3.11-slim
 
 WORKDIR /usr/src/app
 
+COPY requirements.txt ./
+RUN pip install --no-cache-dir -r requirements.txt
 COPY app.py ./
 
-CMD ["python", "app.py"]
+ENV PORT=8080
+CMD ["sh", "-c", "uvicorn app:app --host 0.0.0.0 --port ${PORT} --log-level warning --no-access-log"]
